tests/chainsaw/restrict-sysctls/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-unsafe-sysctl
spec:
  securityContext:
    sysctls:
    - name: kernel.msgmax
      value: "65536"
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
