tests/chainsaw/restrict-sysctls/good-pod-no-sysctls.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-no-sysctls
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
