tests/chainsaw/restrict-sysctls/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-safe-sysctl
spec:
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "1"
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
