tests/chainsaw/restrict-sysctls/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-sysctls
spec:
  steps:
  - name: create a bad pod with unsafe sysctl
    try:
    - create:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: create a good pod with safe sysctl
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-pod.yaml
  - name: create a good pod without sysctls
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-pod-no-sysctls.yaml
